# psycopg2-pool

./: .gitignore  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tests.py
psycopg2_pool/: __init__.py
psycopg2_pool2/: __init__.py
scripts/: test.sh
